@@ -60,6 +60,10 @@ us a note on ns-developers mailing list.</p>
   <li>New generic hash function interface.  Two hash functions are provided:
       murmur3 (default), and the venerable FNV1a.  See the Hash Functions
       section in the Manual.</li>
+  <li>New Mac16Address has been added. It can be used with IPv6 to make
+      an Autoconfigured address.</li>
+  <li>Mac64Address support has been extended. It can now be used with 
+      IPv6 to make an Autoconfigured address.</li>
 </ul>
 
 <h2>Changes to existing API:</h2>
